model boxes mis alignment in hw it works page is fixed

--- a/web/css/how_it_works.css
+++ b/web/css/how_it_works.css
@@ -67,12 +67,16 @@
 	background-image: url('../images/how_it_works/banner5.jpg');
 }
 .contentWrapper {
-  width: 90%;
-  top: 30%;
-  position: absolute;
-  left: 50%;
-  max-width: 1100px;
-  transform: translate(-50%,-20%);
+	width: 90%;
+	top: 30%;
+	position: absolute;
+	left: 50%;
+	max-width: 1100px; 
+	-ms-transform: translate (-50%,-20%);
+	-webkit-transform: translate (-50%,-20%);
+	-moz-transform: translate (-50%,-20%);
+	-o-transform: translate (-50%,-20%);
+	transform: translate(-50%,-20%);
 }
 #what-you-get .contentWrapper {
 	left: 50%;
